--- a/src/styles/osrs-hiscores.css
+++ b/src/styles/osrs-hiscores.css
@@ -1,10 +1,5 @@
 @import "./constants.css";
 
-#hiscores {
-  max-width: 700px;
-  min-width: 380px;
-}
-
 .hiscores-text {
   padding: 4px;
 }
