--- a/src/styles/yr.css
+++ b/src/styles/yr.css
@@ -35,8 +35,6 @@
   margin-top: 20px;
   padding-bottom: 20px;
   border-radius: 4px;
-  max-width: 650px;
-  min-width: 380px;
 }
 
 .weather-text {
